<resources>
    <string name="app_name">Owner</string>
    <string name="themmonan">Thêm Món Ăn</string>
    <string name="tenmonan">Tên món ăn :</string>
    <string name="phanloai">Phân Loại :</string>
    <string name="gia">Giá :</string>
    <string name="chonanh">Chọn Ảnh :</string>
    <string name="capnhat">Cập Nhật</string>
    <string name="xoa">Xóa</string>
    <string name="qlMonAn">Quản Lý Món Ăn</string>
    <string name="danhsach">Danh Sách Món Ăn :</string>
    <string name="themmon">Thêm Món</string>
    <string name="themnhanvien">Thêm Nhân Viên</string>
    <string name="tennhanvien">Tên Nhân Viên :</string>
    <string name="chucvu">Chức Vụ :</string>
    <string name="tendangnhap">Tên Đăng Nhập :</string>
    <string name="matkhau">Mật Khẩu :</string>
    <string name="sodienthoai">Số Điện Thoại :</string>
    <string name="soCMND">Số CMND :</string>
    <string name="lamtheoca">Làm Theo Ca : </string>
    <string name="themhanghoa">Thêm Hàng Hóa</string>
    <string name="tenhanghoa">"Tên hàng hóa : "</string>
    <string name="soluong">Số lượng :</string>
    <string-array name="spinner_category">
        <item>Cafe</item>
        <item>Bánh Ngọt</item>
        <item>Trà Sữa</item>
    </string-array>
    <string-array name="spinner_category_manager">
        <item>Tất cả</item>
        <item>Combo</item>
        <item>Bánh Ngọt</item>
        <item>Cafe</item>
        <item>Trà Sữa</item>
    </string-array>
    <string name="sua">Sửa</string>
    <string name="capnhathanghoa">Cập Nhật</string>
    <string name="xoahanghoa">Xóa Hàng</string>
    <string name="doanhthuNam">Doanh Thu Theo Năm</string>

    <string-array name="lstCaLam">
        <item>Sáng</item>
        <item>Chiều</item>
        <item>Tối</item>
    </string-array>

    <string-array name="lstChucvu">
        <item>Quản Lý</item>
        <item>Thu Ngân</item>
        <item>Phục Vụ</item>
    </string-array>
    <string-array name="filterCaLam">
        <item>Tất Cả</item>
        <item>Sáng</item>
        <item>Chiều</item>
        <item>Tối</item>
    </string-array>
    <string-array name="filterChucVu">
        <item>Tất Cả</item>
        <item>Quản Lý</item>
        <item>Thu Ngân</item>
        <item>Phục Vụ</item>
    </string-array>
    <string-array name="filterKho">
        <item>Tất Cả</item>
        <item>Nguyên Liệu</item>
        <item>Bánh Ngọt</item>
        <item>Trà Sữa</item>
    </string-array>
    <string-array name="lstQuanLyKho">
        <item>Nguyên Liệu</item>
        <item>Bánh Ngọt</item>
        <item>Trà Sữa</item>
    </string-array>
    <string name="title_activity_doanh_thu_date">DoanhThuDate</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string-array name="lsvDoanhThu">
        <item>N/A</item>
        <item>Theo Ngày</item>
        <item>Theo Tháng</item>
        <item>Theo Năm</item>
    </string-array>
</resources>