<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:background="#FE9B58"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent" android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/themmonan"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="26dp"
        android:layout_marginVertical="10dp"
        android:textColor="@color/colorPrimary">
    </TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tenmonan"
        android:layout_gravity="left"
        android:textSize="20dp"
        android:paddingHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:textColor="@color/colorPrimary">
    </TextView>
    <EditText
        android:textAlignment="viewEnd"
        android:text="Cà Phê"
        android:id="@+id/edtTenMonAn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:padding="10dp"
        android:layout_marginVertical="5dp"
        android:background="@drawable/custom_edittext">
    </EditText>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phanloai"
        android:layout_gravity="left"
        android:textSize="20dp"
        android:paddingHorizontal="10dp"
        android:layout_marginVertical="20dp"
        android:textColor="@color/colorPrimary">
    </TextView>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:padding="20dp"
        android:layout_marginHorizontal="10dp">
    </Spinner>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gia"
        android:layout_gravity="left"
        android:textSize="20dp"
        android:paddingHorizontal="10dp"
        android:layout_marginVertical="20dp"
        android:textColor="@color/colorPrimary">
    </TextView>
    <EditText
        android:textAlignment="viewEnd"
        android:text="30.000đ"
        android:id="@+id/edtGiaMonAn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:padding="10dp"
        android:layout_marginVertical="5dp"
        android:background="@drawable/custom_edittext">
    </EditText>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chonanh"
        android:layout_gravity="left"
        android:textSize="20dp"
        android:paddingHorizontal="10dp"
        android:layout_marginVertical="20dp"
        android:textColor="@color/colorPrimary">
    </TextView>

    <LinearLayout
        android:gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/mayanh"
            android:layout_marginHorizontal="5dp"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/ic_baseline_camera_alt_24"></ImageButton>
        <ImageButton
            android:id="@+id/thuvienanh"
            android:layout_marginHorizontal="5dp"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/ic_baseline_photo_library_24">
        </ImageButton>
    </LinearLayout>
    <LinearLayout
        android:layout_marginRight="20dp"
        android:layout_gravity="right"
        android:gravity="right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">
        <Button
            android:id="@+id/btnCapNhat"
            android:layout_marginHorizontal="5dp"
            android:background="@drawable/custom_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/capnhat">
        </Button>
        <Button
            android:id="@+id/btnXoa"
            android:layout_marginHorizontal="5dp"
            android:background="@drawable/custom_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xoa">
        </Button>
    </LinearLayout>


</LinearLayout>