<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main_drawer"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activity.AddNhanVienActivity">
    <LinearLayout
        android:background="#FE9B58"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <include layout="@layout/toolbar"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tennhanvien"
            android:layout_gravity="left"
            android:textSize="16dp"
            android:paddingHorizontal="10dp"
            android:textColor="@color/colorPrimary">
        </TextView>
        <EditText
            android:padding="5dp"
            android:text="Nguyễn Hoàng Long"
            android:id="@+id/edtTenNhanVien"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/custom_edittext">
        </EditText>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chucvu"
            android:layout_gravity="left"
            android:textSize="16dp"
            android:paddingHorizontal="5dp"
            android:padding="5dp"
            android:textColor="@color/colorPrimary">
        </TextView>

        <Spinner
            android:id="@+id/spChucVu"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/custom_button"
            android:padding="10dp"
            android:textAlignment="center"></Spinner>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tendangnhap"
            android:layout_gravity="left"
            android:textSize="16dp"
            android:paddingHorizontal="10dp"
            android:textColor="@color/colorPrimary">
        </TextView>
        <EditText
            android:padding="5dp"
            android:text="nguyenhoanglong"
            android:id="@+id/edtTenDangNhap"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/custom_edittext">
        </EditText>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/matkhau"
            android:layout_gravity="left"
            android:textSize="16dp"
            android:paddingHorizontal="10dp"
            android:textColor="@color/colorPrimary">
        </TextView>
        <EditText
            android:text="abc"
            android:id="@+id/edtMatKhau"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="10dp"
            android:padding="5dp"
            android:background="@drawable/custom_edittext">
        </EditText>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sodienthoai"
            android:layout_gravity="left"
            android:textSize="16dp"
            android:paddingHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:textColor="@color/colorPrimary">
        </TextView>
        <EditText
            android:text="0377519594"
            android:id="@+id/edtSoDienThoai"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="10dp"
            android:padding="5dp"
            android:background="@drawable/custom_edittext">
        </EditText>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/soCMND"
            android:layout_gravity="left"
            android:textSize="16dp"
            android:paddingHorizontal="10dp"
            android:textColor="@color/colorPrimary">
        </TextView>
        <EditText
            android:text="123456789"
            android:id="@+id/edtSoCMND"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="10dp"
            android:padding="5dp"
            android:background="@drawable/custom_edittext">
        </EditText>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lamtheoca"
            android:layout_gravity="left"
            android:textSize="16dp"
            android:paddingHorizontal="10dp"
            android:padding="5dp"
            android:textColor="@color/colorPrimary">
        </TextView>

        <Spinner
            android:id="@+id/spCaLam"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/custom_button"
            android:padding="10dp"
            android:textAlignment="center"/>
        <Button
            android:id="@+id/btnThemNhanVien"
            android:layout_marginVertical="15dp"
            android:padding="10dp"
            android:textSize="16dp"
            android:layout_marginHorizontal="20dp"
            android:layout_gravity="right"
            android:background="@drawable/custom_button"
            android:text="@string/themnhanvien"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></Button>
    </LinearLayout>
    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:id="@+id/navDrawerMenu"
        app:menu="@menu/main_actions"
        >
    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>