<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent" android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/qlMonAn"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="26dp"
        android:layout_marginVertical="10dp"
        android:textColor="@color/colorPrimary">
    </TextView>
    <Spinner
        android:id="@+id/searchMonAn"
        android:layout_gravity="right"
        android:gravity="right"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:padding="20dp"
        android:layout_marginHorizontal="10dp">
    </Spinner>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/danhsach"
        android:layout_gravity="left"
        android:textSize="20dp"
        android:padding="10dp"
        android:layout_marginVertical="10dp"
        android:textColor="@color/colorPrimary">
    </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ListView
            android:id="@+id/lvDSMonAn"
            android:layout_width="match_parent"
            android:layout_height="400dp"></ListView>
    </LinearLayout>
    <Button
        android:layout_marginVertical="15dp"
        android:padding="10dp"
        android:textSize="16dp"
        android:layout_marginHorizontal="20dp"
        android:layout_gravity="right"
        android:background="@drawable/custom_button"
        android:text="@string/themmon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></Button>
</LinearLayout>