<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:background="#FE9B58"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent" android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/themhanghoa"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="26dp"
        android:layout_marginVertical="10dp"
        android:textColor="@color/colorPrimary">
    </TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tenhanghoa"
        android:layout_gravity="left"
        android:textSize="20dp"
        android:paddingHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:textColor="@color/colorPrimary">
    </TextView>
    <EditText
        android:textAlignment="viewEnd"
        android:text="Cà Phê"
        android:id="@+id/edtTenHangHoa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:padding="10dp"
        android:layout_marginVertical="5dp"
        android:background="@drawable/custom_edittext">
    </EditText>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/soluong"
        android:layout_gravity="left"
        android:textSize="20dp"
        android:paddingHorizontal="10dp"
        android:layout_marginVertical="20dp"
        android:textColor="@color/colorPrimary">
    </TextView>
    <EditText
        android:textAlignment="viewEnd"
        android:text="6 KG"
        android:id="@+id/edtSoLuong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:padding="10dp"
        android:layout_marginVertical="5dp"
        android:background="@drawable/custom_edittext">
    </EditText>
        <Button
            android:layout_marginVertical="5dp"
            android:padding="20dp"
            android:layout_gravity="right"
            android:id="@+id/btnThemHangHoa"
            android:layout_marginHorizontal="30dp"
            android:background="@drawable/custom_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/themhanghoa">
        </Button>



</LinearLayout>