<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main_drawer"
    tools:context=".Activity.UpdateHangHoaKho">
    <LinearLayout
        android:background="#FE9B58"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include layout="@layout/toolbar"/>

        <TextView
            android:paddingHorizontal="@dimen/normal10dp"
            android:layout_marginVertical="@dimen/normal10dp"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="left"
            android:textSize="18sp"
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Phân Loại :" />

        <TextView
            android:id="@+id/phanloai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="@dimen/normal10dp"
            android:gravity="center"
            android:paddingHorizontal="@dimen/normal10dp"
            android:text="Phân Loại"
            android:textColor="#0E0E0E"
            android:textSize="@dimen/normal20dp"></TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tenhanghoa"
            android:layout_gravity="left"
            android:textSize="@dimen/normal20dp"
            android:paddingHorizontal="@dimen/normal10dp"
            android:layout_marginVertical="@dimen/normal10dp"
            android:textColor="@color/colorPrimary">
        </TextView>
        <EditText
            android:id="@+id/edtTenHangHoa"
            android:layout_width="match_parent"
            android:layout_height="@dimen/normal50dp"
            android:layout_marginHorizontal="@dimen/normal10dp"
            android:padding="@dimen/normal10dp"
            android:layout_marginVertical="@dimen/normal5dp"
            android:background="@drawable/custom_edittext">
        </EditText>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/soluong"
            android:layout_gravity="left"
            android:textSize="@dimen/normal20dp"
            android:paddingHorizontal="@dimen/normal10dp"
            android:layout_marginVertical="@dimen/normal20dp"
            android:textColor="@color/colorPrimary">
        </TextView>
        <EditText
            android:id="@+id/edtSoLuong"
            android:layout_width="match_parent"
            android:layout_height="@dimen/normal50dp"
            android:layout_marginHorizontal="@dimen/normal10dp"
            android:padding="@dimen/normal10dp"
            android:layout_marginVertical="@dimen/normal5dp"
            android:background="@drawable/custom_edittext">
        </EditText>
        <LinearLayout
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginVertical="@dimen/normal10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:gravity="center"
                android:id="@+id/btnCapNhat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/normal10dp"
                android:layout_marginVertical="@dimen/normal10dp"
                android:background="@drawable/custom_button"
                android:drawableLeft="@android:drawable/ic_menu_edit"
                android:padding="@dimen/normal10dp"
                android:textSize="16dp"
                android:text="@string/capnhathanghoa"></Button>

            <Button
                android:textSize="16dp"
                android:id="@+id/btnXoaHang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/normal10dp"
                android:layout_marginVertical="@dimen/normal10dp"
                android:background="@drawable/custom_button"
                android:drawableLeft="@android:drawable/ic_menu_delete"
                android:gravity="center"
                android:padding="@dimen/normal10dp"
                android:text="@string/xoahanghoa"></Button>
        </LinearLayout>

    </LinearLayout>
<!--    <com.google.android.material.navigation.NavigationView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="match_parent"-->
<!--        android:layout_gravity="start"-->
<!--        android:fitsSystemWindows="true"-->
<!--        android:id="@+id/navDrawerMenu"-->
<!--        app:menu="@menu/main_actions"-->
<!--        />-->
</androidx.drawerlayout.widget.DrawerLayout>