<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main_drawer"
    tools:context=".Activity.AddHangHoaActivity">
    <LinearLayout
        android:background="#FE9B58"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include layout="@layout/toolbar"/>

        <TextView
            android:paddingHorizontal="@dimen/normal10dp"
            android:layout_marginVertical="@dimen/normal10dp"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="left"
            android:textSize="@dimen/normal20dp"
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Phân Loại :" />

        <Spinner
            android:layout_marginHorizontal="@dimen/normal20dp"
            android:padding="@dimen/normal10dp"
            android:gravity="right"
            android:layout_gravity="right"
            android:entries="@array/lstChucvu"
            android:id="@+id/SpinnerPL"
            android:layout_width="150dp"
            android:layout_height="@dimen/normal50dp"
            android:background="@drawable/background_spinner"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tenhanghoa"
            android:layout_gravity="left"
            android:textSize="@dimen/normal20dp"
            android:paddingHorizontal="@dimen/normal10dp"
            android:layout_marginVertical="@dimen/normal10dp"
            android:textColor="@color/colorPrimary">
        </TextView>
        <EditText
            android:textAlignment="viewEnd"
            android:id="@+id/edtTenHangHoa"
            android:layout_width="match_parent"
            android:layout_height="@dimen/normal50dp"
            android:layout_marginHorizontal="@dimen/normal10dp"
            android:padding="@dimen/normal10dp"
            android:layout_marginVertical="@dimen/normal5dp"
            android:background="@drawable/custom_edittext">
        </EditText>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/soluong"
            android:layout_gravity="left"
            android:textSize="@dimen/normal20dp"
            android:paddingHorizontal="@dimen/normal10dp"
            android:layout_marginVertical="@dimen/normal20dp"
            android:textColor="@color/colorPrimary">
        </TextView>
        <EditText
            android:textAlignment="viewEnd"
            android:id="@+id/edtSoLuong"
            android:layout_width="match_parent"
            android:layout_height="@dimen/normal50dp"
            android:layout_marginHorizontal="@dimen/normal10dp"
            android:padding="@dimen/normal10dp"
            android:layout_marginVertical="@dimen/normal5dp"
            android:background="@drawable/custom_edittext">
        </EditText>
        <Button
            android:layout_marginVertical="@dimen/normal5dp"
            android:padding="20dp"
            android:layout_gravity="right"
            android:id="@+id/btnThemHangHoa"
            android:layout_marginHorizontal="@dimen/normal30dp"
            android:background="@drawable/custom_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/themhanghoa">
        </Button>
    </LinearLayout>
    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:id="@+id/navDrawerMenu"
        app:menu="@menu/main_actions"
        />
</androidx.drawerlayout.widget.DrawerLayout>